fixed p2 zoom overflow issue

--- a/assets/_scss/_homeless-analysis.scss
+++ b/assets/_scss/_homeless-analysis.scss
@@ -294,7 +294,7 @@
   #panel_map {
     margin-top: 5px;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     background-color: inherit;
     border-style: solid;
     border-width: 0.5px;
